--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,58 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
 
-# testing
-/coverage
-
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
+# Production build files
 /build
 
-# misc
+# Static exports
+/export
+
+# Miscellaneous
 .DS_Store
 *.pem
 
-# debug
+# Node.js generated files and folders
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+.npm
 
-# env files (can opt-in for committing if needed)
-.env*
+# Local environment variables
+.env*.local
+.env
 
-# vercel
-.vercel
+# Editor directories and files
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-workspace
 
-# typescript
-*.tsbuildinfo
+# Next.js specific files
 next-env.d.ts
+
+# Optional eslint cache
+.eslintcache
+
+# Output of storybook build
+/storybook-static
+
+# Coverage directory
+/coverage
+
+# Mac files
+.AppleDouble
+
+# Optional Prettier cache file
+.prettiercache
