--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "embeddings": "tsx src/scripts/generate-embeddings.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@pinecone-database/pinecone": "^6.0.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
+    "openai": "^4.103.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zustand": "^5.0.5"
@@ -42,6 +45,7 @@
     "postcss": "^8",
     "storybook": "^8.6.14",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.4",
     "typescript": "^5",
     "vitest": "^3.1.4"
   },
